--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,79 +3,79 @@
   <div class="container">
     <div class="row">
       <div class="col-3 pt-2">
-        <h2><%= @user.username.capitalize %></h2>
+        <h1><%= @user.username.capitalize %></h1>
       </div>
     </div>
     <div class="row">
       <div class="col-12 mt-3">
         <div class="d-flex justify-content-between">
-          <h3>Rating</h3>
-          <%= link_to 'Reviews', "#" %>
+          <h2>Rating</h2>
+          <button class="b"><%= link_to 'Reviews', "#" %></button>
         </div>
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-12 mt-5">
+        <div class="d-flex justify-content-between">
+          <h2>My Collections</h2>
+           <button class="b"><%= link_to 'Add Sneaker', new_user_sneaker_path(@user, @sneaker) %></button>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="container mt-5">
-  <div class="row">
-    <div class="col-3">
-      <div class="d-flex justify-content-between">
-        <h3>My Collection</h3>
-        <%= link_to 'Add Sneaker', new_user_sneaker_path(@user, @sneaker) %>
-      </div>
-    </div>
-  </div>
 
-<div class="container brand-grid">
-  <% @sneakers.each do |sneaker| %>
+    <div class="container brand-grid">
+      <% @sneakers.each do |sneaker| %>
 
-    <div class="container sneaker-card">
-      <%# row 1 - Brand Logo & Avator Logo %>
-      <div class="row d-flex justify-content-between">
-        <div class="col-2">
-          <%= image_tag "brand_logos/nike.png", alt: "Nike Logo", width: 40 %>
-        </div>
+        <div class="container sneaker-card">
+          <%# row 1 - Brand Logo & Avator Logo %>
+          <div class="row d-flex justify-content-between">
+            <div class="col-2">
+              <%= image_tag "brand_logos/nike.png", alt: "Nike Logo", width: 40 %>
+            </div>
 
-        <div class="col-2" id="sneaker-card-avatar">
-          <img src="https://source.unsplash.com/LxVxPA1LOVM/60x60" alt="Avator Logo" class="avatar-bordered">
-        </div>
-      </div>
-    <%# Sneaker image %>
-      <div class="row mt-3">
-        <div class="col-3" id="sneaker-card-image">
-            <%= image_tag "airjordon.png", alt: "Nike shoe", width: 250, height: 200 %>
-        </div>
-      </div>
-
-    <%# Description %>
-      <div class="container">
-        <%# Model Name %>
-        <div class="row">
-          <div class="col-3 mt-3">
-            <h2><%= sneaker.model %></h2>
+            <div class="col-2" id="sneaker-card-avatar">
+              <img src="https://source.unsplash.com/LxVxPA1LOVM/60x60" alt="Avator Logo" class="avatar-bordered">
+            </div>
           </div>
-        </div>
-        <%# Size and Price %>
-        <div class="row my-2 d-flex justify-content-between">
-          <div class="col-1">
-            <h3>Size: <%= sneaker.size %></h3>
+        <%# Sneaker image %>
+          <div class="row mt-3">
+            <div class="col-3" id="sneaker-card-image">
+                <%= image_tag "airjordon.png", alt: "Nike shoe", width: 250, height: 200 %>
+            </div>
           </div>
 
-          <div class="col-2" id="sneaker-card-price" >
-            <h3>Price: $<%= sneaker.price %></h3>
+        <%# Description %>
+          <div class="container">
+            <%# Model Name %>
+            <div class="row">
+              <div class="col-3 mt-3">
+                <h2><%= sneaker.model %></h2>
+              </div>
+            </div>
+            <%# Size and Price %>
+            <div class="row my-2 d-flex justify-content-between">
+              <div class="col-1">
+                <h3>Size: <%= sneaker.size %></h3>
+              </div>
+
+              <div class="col-2" id="sneaker-card-price" >
+                <h3>Price: $<%= sneaker.price %></h3>
+              </div>
+            </div>
+            <%# button %>
+            <div class="row">
+              <div class="col-6">
+                <button class="s-btn"><%= link_to "View Details", user_sneaker_path(sneaker.user, sneaker) %></button>
+              </div>
+            </div>
           </div>
         </div>
-        <%# button %>
-        <div class="row">
-          <div class="col-6">
-            <button class="s-btn"><%= link_to "View Details", user_sneaker_path(sneaker.user, sneaker) %></button>
-          </div>
-        </div>
+        <% end %>
       </div>
-    </div>
-    <% end %>
-  </div>
 </div>
 
 
