--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-9">
           <h1>SneakerHeads</h1>
-          <h2 class="mt-3">The Place Where SneakerHeads Gather</h2>
+          <h2 class="mt-3">The Heartbeat of SneakerHeads</h2>
           <button class="b mt-5"><%= link_to "LASTEST ARRIVALS", sneakers_path %></button>
         </div>
       </div>
