--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -14,7 +14,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400;700&display=swap');
 // font-family: 'Roboto Mono', monospace;
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Permanent+Marker&family=Shadows+Into+Light&display=swap');
 
 // Utilites
 
@@ -36,7 +36,7 @@ h1 {
 
 h2 {
   color: white;
-  font-family: 'Shadows Into Light', cursive;
+  font-family: 'Permanent Marker', cursive;
   font-size: 35px;
 }
 
