--- a/app/views/sneakers/show.html.erb
+++ b/app/views/sneakers/show.html.erb
@@ -26,10 +26,10 @@
       <p><%= @sneaker.description %></p>
       <p>Size <%= @sneaker.size %></p>
       <p>Owner: <%= @sneaker.user.first_name %></p>
-      <%= link_to "Back To #{@sneaker.brand}", brand_sneakers_path(@sneaker.brand), class: "btn btn-gradient" %>
-      <%= link_to "Home", root_path, class: "btn btn-gradient" %>
+      <%= link_to "Back To #{@sneaker.brand}", brand_sneakers_path(@sneaker.brand), class:"glow-on-hover"%>
+      <%= link_to "Home", root_path, class:"glow-on-hover" %>
       <% if @sneaker.user != current_user %>
-        <%= link_to "Buy Now", new_sneaker_transaction_path(@sneaker), class: "btn btn-gradient" %>
+        <%= link_to "Buy Now", new_sneaker_transaction_path(@sneaker), class:"glow-on-hover" %>
         <% end %>
     </div>
   </div>
