--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,15 @@
     <div class="row">
       <div class="col-12 mt-3">
         <div class="d-flex justify-content-between">
+          <h2>Home</h2>
+          <button class="b"><%= link_to 'Home', root_path %></button>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12 mt-3">
+        <div class="d-flex justify-content-between">
           <h2>Rating</h2>
           <button class="b"><%= link_to 'Reviews', "#" %></button>
         </div>
